<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.jorge.mobile.com.transportalert.DetailActivity">


    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true"
        android:layout_gravity="center"
        android:layout_width="match_parent"


        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:transitionName="@string/activity_cardview_trans"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="8dp">



        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iconTube"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="0.2"
                android:transitionName="@string/activity_image_trans"
                android:padding="5dp" />

            <LinearLayout android:layout_width="wrap_content"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tubeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/district_label"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginLeft="10dp"
                    android:transitionName="@string/activity_text_tube_name"
                    android:layout_marginTop="10dp"

                    android:padding="2dp"
                    android:textColor="#000000" />
                <TextView
                    android:id="@+id/tubeStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(Checking status...)"
                    android:transitionName="@string/activity_text_tube_status"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/iconStatusImage"
                android:layout_width="70dp"
                android:layout_height="70dp"

                android:layout_gravity="right"
                android:layout_weight="0.1"
                android:padding="5dp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_viewInformation"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_below="@+id/card_view"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_height="400dp"
        card_view:cardCornerRadius="8dp">
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/district_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="10dp"

            android:layout_marginTop="10dp"

            android:padding="2dp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/district_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="10dp"

            android:layout_marginTop="10dp"

            android:padding="2dp"
            android:textColor="#000000" />
        <TextView
            android:id="@+id/additional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/district_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="10dp"
            android:transitionName="@string/activity_text_tube_name"
            android:layout_marginTop="10dp"

            android:padding="2dp"
            android:textColor="#000000" />
        </LinearLayout>
        </ScrollView>
            <ImageView
                android:id="@+id/iconGoodService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/star_wbg"
                android:padding="5dp" />


     </android.support.v7.widget.CardView>



</RelativeLayout>
